prevent content from overflowing

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -3,12 +3,15 @@ body{
   margin: 0;
   height: 100%;
   box-sizing: border-box;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
 
 .container {
   min-height: 100vh;
+  overflow-x: hidden;
+  max-width: 100vw;
   width: 100%;
   background: #7EB549;
   padding: 2rem;
